; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_stress.c_test_config_stress__complex.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_stress.c_test_config_stress__complex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [29 x i8] c"./config-immediate-multiline\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"[imm]\0A multi = \22\\\0Afoo\22\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"imm.multi\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"foo\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_stress__complex() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i8*, align 8
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @cl_git_mkfile(i8* %3, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @git_config_open_ondisk(i32** %1, i8* %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @assert_config_value(i32* %8, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_config_free(i32* %10)
  ret void
}

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_open_ondisk(i32**, i8*) #1

declare dso_local i32 @assert_config_value(i32*, i8*, i8*) #1

declare dso_local i32 @git_config_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
